// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselNavButtons component renders both buttons when not on first or last slide 1`] = `
<body>
  <div>
    <div
      class="absolute right-0 hidden gap-2 tablet:-top-[60px] tablet:flex desktop:-top-[80px] desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
    >
      <button
        data-testid="carousel-nav-prev-test-id"
        style="opacity: 0; transform: rotate(-15deg);"
      >
        <img
          alt="Попередній слайд"
          class="h-[40px] w-[40px] rotate-180 desktop:h-[44px] desktop:w-[44px]"
          data-nimg="1"
          decoding="async"
          height="0"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="0"
        />
      </button>
      <button
        data-testid="carousel-nav-next-test-id"
        style="opacity: 0; transform: rotate(15deg);"
      >
        <img
          alt="Наступний слайд"
          class="h-[40px] w-[40px] desktop:h-[44px] desktop:w-[44px]"
          data-nimg="1"
          decoding="async"
          height="0"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="0"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`CarouselNavButtons component renders no buttons when on first and last slide (edge case) 1`] = `
<body>
  <div>
    <div
      class="absolute right-0 hidden gap-2 tablet:-top-[60px] tablet:flex desktop:-top-[80px] desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
    />
  </div>
</body>
`;

exports[`CarouselNavButtons component renders the next button when not on the last slide 1`] = `
<body>
  <div>
    <div
      class="absolute right-0 hidden gap-2 tablet:-top-[60px] tablet:flex desktop:-top-[80px] desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
    >
      <button
        data-testid="carousel-nav-next-test-id"
        style="opacity: 0; transform: rotate(15deg);"
      >
        <img
          alt="Наступний слайд"
          class="h-[40px] w-[40px] desktop:h-[44px] desktop:w-[44px]"
          data-nimg="1"
          decoding="async"
          height="0"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="0"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`CarouselNavButtons component renders the previous button when not on the first slide 1`] = `
<body>
  <div>
    <div
      class="absolute right-0 hidden gap-2 tablet:-top-[60px] tablet:flex desktop:-top-[80px] desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
    >
      <button
        data-testid="carousel-nav-prev-test-id"
        style="opacity: 0; transform: rotate(-15deg);"
      >
        <img
          alt="Попередній слайд"
          class="h-[40px] w-[40px] rotate-180 desktop:h-[44px] desktop:w-[44px]"
          data-nimg="1"
          decoding="async"
          height="0"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="0"
        />
      </button>
    </div>
  </div>
</body>
`;
